# PIC18Emu

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  copyxide.sh  main.cpp
impl/: int.tcc  port.tcc
inc/: 18f66k80.hpp  18fxx2.hpp  adc.hpp  alu.hpp  bank.hpp  bus.hpp  ccp.hpp  config.hpp  cpu.hpp  environment.hpp  eusart.cpp  eusart.hpp  gpio.hpp  int.hpp  io.hpp  mem.hpp  port.hpp  reg.hpp  tbl.hpp  timer.hpp
src/: adc.cpp  alu.cpp  bank.cpp  ccp.cpp  config.cpp  cpu.cpp  environment.cpp  eusart.cpp  int.cpp  port.cpp  reg.cpp  tbl.cpp  timer.cpp
